Fix education summary so that text was centered on mobile

--- a/src/components/Section/History/SummaryCounter/SummaryCounter.scss
+++ b/src/components/Section/History/SummaryCounter/SummaryCounter.scss
@@ -52,4 +52,8 @@
   .summary-counter-diplomas {
     width: 100%;
   }
+
+  .summary-counter-title {
+    justify-content: center;
+  }
 }
